fixed image sizing and blank white space

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -25,10 +25,15 @@ code {
 
 .navi {
   border-style: solid;
-  border-bottom: 1px;
   border-left: 1px;
   border-right: 1px;
   border-color: rgb(26, 255, 26);
+  /* background-color: #2b2b2b; */
+}
+
+.hero {
+  width: 100%;
+  padding: 0;
 }
 
 .hero-img {
